// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericInput json renders and matches the snapshot 1`] = `
.c4 {
  font-size: 0.875rem;
  border-radius: 4px;
  max-height: 31.5rem;
  min-height: 15.75rem;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c1 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c1 > * + * {
  margin-top: 4px;
}

.c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c6 {
  line-height: 1.25;
}

.c6 .cm-editor {
  background-color: #32324d;
  width: 100%;
  outline: none;
}

.c6 .cm-scroller {
  border: 1px solid #dcdce4;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c6 .cm-scroller:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c6 .cm-editor,
.c6 .cm-scroller {
  border-radius: 4px;
}

.c6 .cm-gutters,
.c6 .cm-activeLineGutter {
  background-color: #4a4a6a;
}

<div>
  <div>
    <div
      class="c0 c1"
    >
      <label
        class="c2"
        for="0"
      >
        <div
          class="c3"
        >
          Default label
        </div>
      </label>
      <div
        class="c4 c5 c6"
        font-size="2"
      >
        <div
          class="cm-editor ͼ1 ͼ3 ͼ4 ͼ1a ͼo"
        >
          <div
            aria-live="polite"
            style="position: fixed; top: -10000px;"
          />
          <div
            class="cm-scroller"
            tabindex="-1"
          >
            <div
              aria-hidden="true"
              class="cm-gutters"
              style="min-height: 14px; position: sticky;"
            >
              <div
                class="cm-gutter cm-lineNumbers"
              >
                <div
                  class="cm-gutterElement"
                  style="height: 0px; visibility: hidden; pointer-events: none;"
                >
                  9
                </div>
                <div
                  class="cm-gutterElement cm-activeLineGutter"
                  style="height: 14px;"
                >
                  1
                </div>
              </div>
              <div
                class="cm-gutter cm-foldGutter"
              >
                <div
                  class="cm-gutterElement"
                  style="height: 0px; visibility: hidden; pointer-events: none;"
                >
                  <span
                    title="Unfold line"
                  >
                    ›
                  </span>
                </div>
                <div
                  class="cm-gutterElement cm-activeLineGutter"
                  style="height: 14px;"
                />
              </div>
            </div>
            <div
              aria-autocomplete="list"
              aria-multiline="true"
              autocapitalize="off"
              autocorrect="off"
              class="cm-content"
              contenteditable="true"
              data-language="json"
              role="textbox"
              spellcheck="false"
              style="tab-size: 4"
              translate="no"
            >
              <div
                class="cm-activeLine cm-line"
              >
                <br />
              </div>
            </div>
            <div
              aria-hidden="true"
              class="cm-layer cm-layer-above cm-cursorLayer"
              style="z-index: 150; animation-duration: 1200ms;"
            />
            <div
              aria-hidden="true"
              class="cm-layer cm-selectionLayer"
              style="z-index: -2;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c7"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`GenericInput number renders and matches the snapshot 1`] = `
.c9 {
  padding-right: 12px;
  padding-left: 8px;
}

.c11 {
  color: #8e8ea9;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c4 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c12 path {
  fill: #8e8ea9;
}

.c1 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c1 > * + * {
  margin-top: 4px;
}

.c14 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c5 {
  line-height: 0;
}

.c8 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 0;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c8::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c8::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c8[aria-disabled='true'] {
  color: inherit;
}

.c8:focus {
  outline: none;
  box-shadow: none;
}

.c7 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c7:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1rem;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c10 svg {
  display: block;
  height: 0.25rem;
  -webkit-transform: rotateX(180deg);
  -ms-transform: rotateX(180deg);
  transform: rotateX(180deg);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c13 svg {
  display: block;
  height: 0.25rem;
}

<div>
  <div>
    <div
      class="c0 c1"
    >
      <label
        class="c2"
        for="number"
      >
        <div
          class="c3"
        >
          Default label
          <span
            class="c4 c5"
          >
            *
          </span>
        </div>
      </label>
      <div
        class="c6 c7"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          aria-required="true"
          class="c8"
          id="number"
          name="number"
          placeholder="Default placeholder"
          type="text"
          value=""
        />
        <div
          class="c9"
        >
          <button
            aria-hidden="true"
            class="c10"
            data-testid="ArrowUp"
            tabindex="-1"
            type="button"
          >
            <svg
              class="c11 c12"
              fill="none"
              height="1rem"
              viewBox="0 0 14 8"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                fill="#32324D"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <button
            aria-hidden="true"
            class="c13"
            data-testid="ArrowDown"
            tabindex="-1"
            type="button"
          >
            <svg
              class="c11 c12"
              fill="none"
              height="1rem"
              viewBox="0 0 14 8"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                fill="#32324D"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c14"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
